# exempi-vapi

./: README.md  meson.build
src/: ModifyingXmp.vala  MyCustomSchema.vala  ReadingXmp.vala  main.vala  meson.build
vapi/: exempi-2.0.vapi
